[package]
name = "hashassin-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
rayon = "1.5"
md-5 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
scrypt = "0.11"
clap = { version = "4.0", features = ["derive"] }  
base64 = { version = "0.21", features = ["alloc"] }
thiserror = "1.0"
hex = "0.4"
digest = "0.10"
anyhow = "1.0"
tracing = "0.1"

